--- a/index.html
+++ b/index.html
@@ -7,37 +7,79 @@
     <title>js-es6-icons</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
     
 <body>
     <header>
         <div>
-            <h1>FontIcons</h1>
+            <h1 class="text-primary">FontIcons</h1>
         </div>
-        <div></div>
+        <div id="strisciablu" class="bg-primary text-center d-flex align-items-center justify-content-center">
+            <span class="text-light">Filtra per tipo</span>
+            <select name="pets" id="pet-select">
+                <option value="">--Please choose an option--</option>
+                <option value="dog">Dog</option>
+                <option value="cat">Cat</option>
+                <option value="hamster">Hamster</option>
+                <option value="parrot">Parrot</option>
+                <option value="spider">Spider</option>
+                <option value="goldfish">Goldfish</option>
+            </select>
+        </div>
     </header>
     <main>
-        <div class="container">
+        <div class="container mt-5">
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
             </div>
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
             </div>
             <div class="row">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
+                <div class="col">
+                    <i class="fas fa-cat"></i>
+                </div>
             </div>
        
         </div>
